# svml-python

./: .env.local  .gitignore  LICENSE.txt  MANIFEST.in  README.md  create_compare_fixture.py  create_generate_fixtures.py  create_refine_fixture.py  export_sdk_docs.py  export_sdk_docs.sh  publish_pypi.py  pyproject.toml  test
docs/: svml-sdk.mdx  svml.json  svml_public.json
test-svml/: conftest.py  test_analyze.py  test_client.py  test_compare.py  test_correct.py  test_custom.py  test_generate.py  test_refine.py  test_validate.py
test-svml/fixtures/: compare_from_generate.json  compare_svml_only.json  compare_with_justifications.json  generate_1.json  generate_2.json  generate_svml_1.svml  generate_svml_2.svml  invalid_svml.svml  refine_analysis_a.json  refine_svml.json  start_prompt_2.md  valid_svml.svml  validate_invalid_svml.json  validate_valid_svml.json
